--- a/Meter Card and Smart Parking Meter/ViewControllers/Xibs/Views/Rating/Rating.xib
+++ b/Meter Card and Smart Parking Meter/ViewControllers/Xibs/Views/Rating/Rating.xib
@@ -21,12 +21,8 @@
                 <outlet property="heightView" destination="DOm-Xd-GaY" id="N09-oN-473"/>
                 <outlet property="middleView" destination="nUq-mz-cbu" id="QZE-XD-GLm"/>
                 <outlet property="parkingNameLabel" destination="tiJ-Ga-3th" id="mDG-ID-Ukg"/>
-                <outlet property="rating1" destination="RCu-Ua-dx7" id="sz7-te-HHt"/>
-                <outlet property="rating2" destination="wwm-XQ-u5Q" id="aTP-YT-LrL"/>
-                <outlet property="rating3" destination="o0X-qh-BeW" id="oNX-pj-Uzs"/>
-                <outlet property="rating4" destination="9Kr-vA-Y64" id="QDD-1d-YTr"/>
-                <outlet property="rating5" destination="qen-13-O2K" id="ZM0-9P-6da"/>
                 <outlet property="ratingLabel" destination="bHy-dK-IS7" id="ngx-WN-aoN"/>
+                <outlet property="ratingView" destination="GNk-Za-sGl" id="my5-xm-Uel"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -38,80 +34,47 @@
                     <rect key="frame" x="0.0" y="0.0" width="291" height="40"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title Park" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tiJ-Ga-3th">
-                            <rect key="frame" x="0.0" y="0.0" width="79.5" height="21"/>
+                            <rect key="frame" x="0.0" y="0.0" width="79.5" height="17.5"/>
                             <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c1T-tP-NpG">
-                            <rect key="frame" x="0.0" y="21" width="240" height="9"/>
+                            <rect key="frame" x="0.0" y="17.5" width="240" height="9"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="9" id="DOm-Xd-GaY"/>
                             </constraints>
                         </view>
                         <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="zpB-rG-JXc">
-                            <rect key="frame" x="0.0" y="30" width="199" height="10"/>
+                            <rect key="frame" x="0.0" y="26.5" width="291" height="13.5"/>
                             <subviews>
-                                <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="3ql-OC-jcs">
-                                    <rect key="frame" x="0.0" y="0.0" width="100.5" height="10"/>
+                                <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="3ql-OC-jcs">
+                                    <rect key="frame" x="0.0" y="0.0" width="188.5" height="13.5"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="9yg-pY-mC8">
-                                            <rect key="frame" x="0.0" y="0.0" width="66" height="10"/>
-                                            <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RCu-Ua-dx7">
-                                                    <rect key="frame" x="0.0" y="0.0" width="10" height="10"/>
-                                                    <color key="backgroundColor" red="0.85490196943283081" green="0.85098040103912354" blue="0.88627451658248901" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" secondItem="RCu-Ua-dx7" secondAttribute="height" multiplier="1:1" id="N4p-i0-ATe"/>
-                                                        <constraint firstAttribute="height" constant="10" id="lbO-br-WFX"/>
-                                                    </constraints>
-                                                    <userDefinedRuntimeAttributes>
-                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                            <real key="value" value="5"/>
-                                                        </userDefinedRuntimeAttribute>
-                                                    </userDefinedRuntimeAttributes>
-                                                </view>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wwm-XQ-u5Q">
-                                                    <rect key="frame" x="14" y="0.0" width="10" height="10"/>
-                                                    <color key="backgroundColor" red="0.85490196943283081" green="0.85098040103912354" blue="0.88627451658248901" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    <userDefinedRuntimeAttributes>
-                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                            <real key="value" value="5"/>
-                                                        </userDefinedRuntimeAttribute>
-                                                    </userDefinedRuntimeAttributes>
-                                                </view>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o0X-qh-BeW">
-                                                    <rect key="frame" x="28" y="0.0" width="10" height="10"/>
-                                                    <color key="backgroundColor" red="0.85490196943283081" green="0.85098040103912354" blue="0.88627451658248901" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    <userDefinedRuntimeAttributes>
-                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                            <real key="value" value="5"/>
-                                                        </userDefinedRuntimeAttribute>
-                                                    </userDefinedRuntimeAttributes>
-                                                </view>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Kr-vA-Y64">
-                                                    <rect key="frame" x="42" y="0.0" width="10" height="10"/>
-                                                    <color key="backgroundColor" red="0.85490196943283081" green="0.85098040103912354" blue="0.88627451658248901" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    <userDefinedRuntimeAttributes>
-                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                            <real key="value" value="5"/>
-                                                        </userDefinedRuntimeAttribute>
-                                                    </userDefinedRuntimeAttributes>
-                                                </view>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qen-13-O2K">
-                                                    <rect key="frame" x="56" y="0.0" width="10" height="10"/>
-                                                    <color key="backgroundColor" red="0.85490196943283081" green="0.85098040103912354" blue="0.88627451658248901" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    <userDefinedRuntimeAttributes>
-                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                            <real key="value" value="5"/>
-                                                        </userDefinedRuntimeAttribute>
-                                                    </userDefinedRuntimeAttributes>
-                                                </view>
-                                            </subviews>
-                                        </stackView>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GNk-Za-sGl" customClass="CosmosView" customModule="Cosmos">
+                                            <rect key="frame" x="0.0" y="0.0" width="154" height="13.5"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="rating">
+                                                    <real key="value" value="0.0"/>
+                                                </userDefinedRuntimeAttribute>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="starSize">
+                                                    <real key="value" value="10"/>
+                                                </userDefinedRuntimeAttribute>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="starMargin">
+                                                    <real key="value" value="4"/>
+                                                </userDefinedRuntimeAttribute>
+                                                <userDefinedRuntimeAttribute type="image" keyPath="filledImage" value="ic_selectedRating"/>
+                                                <userDefinedRuntimeAttribute type="image" keyPath="emptyImage" value="ic_ratingGray"/>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="totalStars">
+                                                    <integer key="value" value="5"/>
+                                                </userDefinedRuntimeAttribute>
+                                                <userDefinedRuntimeAttribute type="boolean" keyPath="updateOnTouch" value="NO"/>
+                                            </userDefinedRuntimeAttributes>
+                                        </view>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0/5.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bHy-dK-IS7">
-                                            <rect key="frame" x="74" y="0.0" width="26.5" height="10"/>
+                                            <rect key="frame" x="162" y="0.0" width="26.5" height="13.5"/>
                                             <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="11"/>
                                             <color key="textColor" name="929292"/>
                                             <nil key="highlightedColor"/>
@@ -119,7 +82,7 @@
                                     </subviews>
                                 </stackView>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nUq-mz-cbu">
-                                    <rect key="frame" x="108.5" y="2" width="6" height="6"/>
+                                    <rect key="frame" x="196.5" y="4" width="6" height="6"/>
                                     <color key="backgroundColor" red="0.85490196080000003" green="0.85098039219999999" blue="0.8862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="6" id="BGE-pV-U2A"/>
@@ -131,8 +94,8 @@
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
                                 </view>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.3 km Nearby" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1AG-9n-HKz">
-                                    <rect key="frame" x="122.5" y="0.0" width="76.5" height="10"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.0 km Nearby" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1AG-9n-HKz">
+                                    <rect key="frame" x="210.5" y="0.0" width="80.5" height="13.5"/>
                                     <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="11"/>
                                     <color key="textColor" name="929292"/>
                                     <nil key="highlightedColor"/>
@@ -155,6 +118,8 @@
         </view>
     </objects>
     <resources>
+        <image name="ic_ratingGray" width="10" height="10"/>
+        <image name="ic_selectedRating" width="16" height="16"/>
         <namedColor name="929292">
             <color red="0.57254904508590698" green="0.57254904508590698" blue="0.57254904508590698" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
